--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,219 @@
 ---
-# defaults file for ansible-role-rhel9-anssi_bp28_high
+# defaults file for rhel9_anssi_bp28_high
+var_authselect_profile: sssd
+var_password_pam_unix_remember: '2'
+var_accounts_passwords_pam_faillock_deny: '3'
+var_accounts_passwords_pam_faillock_fail_interval: '900'
+var_accounts_passwords_pam_faillock_unlock_time: '900'
+var_password_pam_dcredit: '-1'
+var_password_pam_lcredit: '-1'
+var_password_pam_minlen: '18'
+var_password_pam_ocredit: '-1'
+var_password_pam_ucredit: '-1'
+var_accounts_maximum_age_login_defs: '90'
+var_password_pam_unix_rounds: '65536'
+var_accounts_tmout: '600'
+var_accounts_user_umask: '077'
+rsyslog_remote_loghost_address: logcollector
+sysctl_net_ipv6_conf_all_accept_ra_defrtr_value: '0'
+sysctl_net_ipv6_conf_all_accept_ra_pinfo_value: '0'
+sysctl_net_ipv6_conf_all_accept_ra_rtr_pref_value: '0'
+sysctl_net_ipv6_conf_all_accept_redirects_value: '0'
+sysctl_net_ipv6_conf_all_accept_source_route_value: '0'
+sysctl_net_ipv6_conf_all_autoconf_value: '0'
+sysctl_net_ipv6_conf_all_max_addresses_value: '1'
+sysctl_net_ipv6_conf_all_router_solicitations_value: '0'
+sysctl_net_ipv6_conf_default_accept_ra_defrtr_value: '0'
+sysctl_net_ipv6_conf_default_accept_ra_pinfo_value: '0'
+sysctl_net_ipv6_conf_default_accept_ra_rtr_pref_value: '0'
+sysctl_net_ipv6_conf_default_accept_redirects_value: '0'
+sysctl_net_ipv6_conf_default_accept_source_route_value: '0'
+sysctl_net_ipv6_conf_default_autoconf_value: '0'
+sysctl_net_ipv6_conf_default_max_addresses_value: '1'
+sysctl_net_ipv6_conf_default_router_solicitations_value: '0'
+sysctl_net_ipv4_conf_all_accept_redirects_value: '0'
+sysctl_net_ipv4_conf_all_accept_source_route_value: '0'
+sysctl_net_ipv4_conf_all_log_martians_value: '1'
+sysctl_net_ipv4_conf_all_rp_filter_value: '1'
+sysctl_net_ipv4_conf_all_secure_redirects_value: '0'
+sysctl_net_ipv4_conf_default_accept_redirects_value: '0'
+sysctl_net_ipv4_conf_default_accept_source_route_value: '0'
+sysctl_net_ipv4_conf_default_rp_filter_value: '1'
+sysctl_net_ipv4_conf_default_secure_redirects_value: '0'
+sysctl_net_ipv4_icmp_ignore_bogus_error_responses_value: '1'
+sysctl_net_ipv4_tcp_rfc1337_value: '1'
+sysctl_net_ipv4_tcp_syncookies_value: '1'
+sysctl_kernel_kptr_restrict_value: '1'
+var_selinux_policy_name: targeted
+var_selinux_state: enforcing
+var_polyinstantiation_enabled: 'true'
+var_secure_mode_insmod: 'true'
+var_selinuxuser_execheap: 'false'
+var_selinuxuser_execstack: 'false'
+var_ssh_sysadm_login: 'false'
+var_postfix_root_mail_alias: system.administrator@mail.mil
+var_postfix_inet_interfaces: loopback-only
+var_multiple_time_servers: 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp.org
+var_sshd_set_keepalive: '0'
+sshd_idle_timeout_value: '600'
+accounts_maximum_age_login_defs: true
+accounts_password_pam_dcredit: true
+accounts_password_pam_lcredit: true
+accounts_password_pam_minlen: true
+accounts_password_pam_ocredit: true
+accounts_password_pam_ucredit: true
+accounts_password_pam_unix_remember: true
+accounts_password_pam_unix_rounds_password_auth: true
+accounts_password_pam_unix_rounds_system_auth: true
+accounts_passwords_pam_faillock_deny: true
+accounts_passwords_pam_faillock_deny_root: true
+accounts_passwords_pam_faillock_interval: true
+accounts_passwords_pam_faillock_unlock_time: true
+accounts_tmout: true
+accounts_umask_etc_bashrc: true
+accounts_umask_etc_login_defs: true
+accounts_umask_etc_profile: true
+aide_build_database: true
+aide_periodic_cron_checking: true
+audit_rules_privileged_commands_sudo: true
+chronyd_specify_remote_server: true
+configure_strategy: true
+dir_perms_world_writable_sticky_bits: true
+disable_strategy: true
+enable_authselect: true
+enable_strategy: true
+ensure_gpgcheck_globally_activated: true
+ensure_gpgcheck_local_packages: true
+ensure_gpgcheck_never_disabled: true
+ensure_logrotate_activated: true
+ensure_redhat_gpgkey_installed: true
+file_owner_etc_gshadow: true
+file_owner_etc_shadow: true
+file_permissions_etc_group: true
+file_permissions_etc_gshadow: true
+file_permissions_etc_passwd: true
+file_permissions_etc_shadow: true
+file_permissions_sshd_private_key: true
+grub2_enable_iommu_force: true
+high_disruption: true
+high_severity: true
+low_complexity: true
+low_disruption: true
+low_severity: true
+medium_complexity: true
+medium_disruption: true
+medium_severity: true
+mount_option_boot_noexec: true
+mount_option_boot_nosuid: true
+mount_option_home_noexec: true
+mount_option_home_nosuid: true
+mount_option_nodev_nonroot_local_partitions: true
+mount_option_opt_nosuid: true
+mount_option_srv_nosuid: true
+mount_option_tmp_noexec: true
+mount_option_tmp_nosuid: true
+mount_option_var_log_noexec: true
+mount_option_var_log_nosuid: true
+mount_option_var_noexec: true
+mount_option_var_nosuid: true
+mount_option_var_tmp_noexec: true
+mount_option_var_tmp_nosuid: true
+no_direct_root_logins: true
+no_reboot_needed: true
+package_aide_installed: true
+package_chrony_installed: true
+package_dhcp_removed: true
+package_dnf_automatic_installed: true
+package_rsh_removed: true
+package_rsh_server_removed: true
+package_rsyslog_gnutls_installed: true
+package_rsyslog_installed: true
+package_sendmail_removed: true
+package_setroubleshoot_plugins_removed: true
+package_setroubleshoot_removed: true
+package_setroubleshoot_server_removed: true
+package_sudo_installed: true
+package_talk_removed: true
+package_talk_server_removed: true
+package_telnet_removed: true
+package_telnet_server_removed: true
+package_tftp_removed: true
+package_tftp_server_removed: true
+package_xinetd_removed: true
+package_ypbind_removed: true
+package_ypserv_removed: true
+patch_strategy: true
+postfix_client_configure_mail_alias: true
+postfix_network_listening_disabled: true
+reboot_required: true
+restrict_strategy: true
+rsyslog_files_permissions: true
+rsyslog_remote_loghost: true
+sebool_polyinstantiation_enabled: true
+sebool_secure_mode_insmod: true
+sebool_selinuxuser_execheap: true
+sebool_selinuxuser_execstack: true
+sebool_ssh_sysadm_login: true
+security_patches_up_to_date: true
+selinux_policytype: true
+selinux_state: true
+service_rsyslog_enabled: true
+set_password_hashing_algorithm_systemauth: true
+skip_ansible_lint: true
+sshd_disable_root_login: true
+sshd_set_idle_timeout: true
+sshd_set_keepalive: true
+sudo_add_noexec: true
+sudo_add_requiretty: true
+sudo_add_use_pty: true
+sudo_remove_no_authenticate: true
+sudo_remove_nopasswd: true
+sysctl_fs_protected_hardlinks: true
+sysctl_fs_protected_symlinks: true
+sysctl_fs_suid_dumpable: true
+sysctl_kernel_dmesg_restrict: true
+sysctl_kernel_exec_shield: true
+sysctl_kernel_kptr_restrict: true
+sysctl_kernel_modules_disabled: true
+sysctl_kernel_perf_cpu_time_max_percent: true
+sysctl_kernel_perf_event_max_sample_rate: true
+sysctl_kernel_perf_event_paranoid: true
+sysctl_kernel_pid_max: true
+sysctl_kernel_randomize_va_space: true
+sysctl_kernel_sysrq: true
+sysctl_kernel_yama_ptrace_scope: true
+sysctl_net_ipv4_conf_all_accept_redirects: true
+sysctl_net_ipv4_conf_all_accept_source_route: true
+sysctl_net_ipv4_conf_all_log_martians: true
+sysctl_net_ipv4_conf_all_rp_filter: true
+sysctl_net_ipv4_conf_all_secure_redirects: true
+sysctl_net_ipv4_conf_all_send_redirects: true
+sysctl_net_ipv4_conf_default_accept_redirects: true
+sysctl_net_ipv4_conf_default_accept_source_route: true
+sysctl_net_ipv4_conf_default_rp_filter: true
+sysctl_net_ipv4_conf_default_secure_redirects: true
+sysctl_net_ipv4_conf_default_send_redirects: true
+sysctl_net_ipv4_icmp_ignore_bogus_error_responses: true
+sysctl_net_ipv4_ip_forward: true
+sysctl_net_ipv4_ip_local_port_range: true
+sysctl_net_ipv4_tcp_rfc1337: true
+sysctl_net_ipv4_tcp_syncookies: true
+sysctl_net_ipv6_conf_all_accept_ra_defrtr: true
+sysctl_net_ipv6_conf_all_accept_ra_pinfo: true
+sysctl_net_ipv6_conf_all_accept_ra_rtr_pref: true
+sysctl_net_ipv6_conf_all_accept_redirects: true
+sysctl_net_ipv6_conf_all_accept_source_route: true
+sysctl_net_ipv6_conf_all_autoconf: true
+sysctl_net_ipv6_conf_all_max_addresses: true
+sysctl_net_ipv6_conf_all_router_solicitations: true
+sysctl_net_ipv6_conf_default_accept_ra_defrtr: true
+sysctl_net_ipv6_conf_default_accept_ra_pinfo: true
+sysctl_net_ipv6_conf_default_accept_ra_rtr_pref: true
+sysctl_net_ipv6_conf_default_accept_redirects: true
+sysctl_net_ipv6_conf_default_accept_source_route: true
+sysctl_net_ipv6_conf_default_autoconf: true
+sysctl_net_ipv6_conf_default_max_addresses: true
+sysctl_net_ipv6_conf_default_router_solicitations: true
+sysctl_vm_mmap_min_addr: true
+unknown_severity: true
+unknown_strategy: true
