--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -149,6 +149,7 @@ reboot_required: true
 restrict_strategy: true
 rsyslog_files_permissions: true
 rsyslog_remote_loghost: true
+rsyslog_remote_tls: true
 sebool_polyinstantiation_enabled: true
 sebool_secure_mode_insmod: true
 sebool_selinuxuser_execheap: true
