--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 # defaults file for rhel9_anssi_bp28_high
 var_authselect_profile: sssd
-var_password_pam_unix_remember: '2'
+var_password_pam_remember: '2'
+var_password_pam_remember_control_flag: requisite
 var_accounts_passwords_pam_faillock_deny: '3'
 var_accounts_passwords_pam_faillock_fail_interval: '900'
 var_accounts_passwords_pam_faillock_unlock_time: '900'
@@ -10,6 +11,7 @@ var_password_pam_lcredit: '-1'
 var_password_pam_minlen: '18'
 var_password_pam_ocredit: '-1'
 var_password_pam_ucredit: '-1'
+var_logind_session_timeout: '600'
 var_accounts_maximum_age_login_defs: '90'
 var_password_pam_unix_rounds: '65536'
 var_accounts_tmout: '600'
@@ -61,8 +63,9 @@ accounts_password_pam_dcredit: true
 accounts_password_pam_lcredit: true
 accounts_password_pam_minlen: true
 accounts_password_pam_ocredit: true
+accounts_password_pam_pwhistory_remember_password_auth: true
+accounts_password_pam_pwhistory_remember_system_auth: true
 accounts_password_pam_ucredit: true
-accounts_password_pam_unix_remember: true
 accounts_password_pam_unix_rounds_password_auth: true
 accounts_password_pam_unix_rounds_system_auth: true
 accounts_passwords_pam_faillock_deny: true
@@ -97,6 +100,7 @@ file_permissions_sshd_private_key: true
 grub2_enable_iommu_force: true
 high_disruption: true
 high_severity: true
+logind_session_timeout: true
 low_complexity: true
 low_disruption: true
 low_severity: true
