--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,6 @@ var_password_pam_lcredit: '-1'
 var_password_pam_minlen: '18'
 var_password_pam_ocredit: '-1'
 var_password_pam_ucredit: '-1'
-var_logind_session_timeout: '600'
 var_accounts_maximum_age_login_defs: '90'
 var_password_pam_unix_rounds: '65536'
 var_accounts_tmout: '600'
@@ -100,7 +99,6 @@ file_permissions_sshd_private_key: true
 grub2_enable_iommu_force: true
 high_disruption: true
 high_severity: true
-logind_session_timeout: true
 low_complexity: true
 low_disruption: true
 low_severity: true
@@ -151,6 +149,8 @@ postfix_client_configure_mail_alias: true
 postfix_network_listening_disabled: true
 reboot_required: true
 restrict_strategy: true
+rsyslog_files_groupownership: true
+rsyslog_files_ownership: true
 rsyslog_files_permissions: true
 rsyslog_remote_loghost: true
 rsyslog_remote_tls: true
