--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
 # defaults file for rhel9_anssi_bp28_high
-var_authselect_profile: sssd
-var_password_pam_remember: '2'
-var_password_pam_remember_control_flag: requisite
+var_authselect_profile: minimal
+var_password_pam_unix_remember: '2'
 var_accounts_passwords_pam_faillock_deny: '3'
 var_accounts_passwords_pam_faillock_fail_interval: '900'
 var_accounts_passwords_pam_faillock_unlock_time: '900'
@@ -12,9 +11,14 @@ var_password_pam_minlen: '18'
 var_password_pam_ocredit: '-1'
 var_password_pam_ucredit: '-1'
 var_accounts_maximum_age_login_defs: '90'
+var_accounts_password_minlen_login_defs: '18'
 var_password_pam_unix_rounds: '65536'
 var_accounts_tmout: '600'
 var_accounts_user_umask: '077'
+var_l1tf_options: full,force
+var_mds_options: full,nosmt
+var_rng_core_default_quality: '500'
+var_spec_store_bypass_disable_options: seccomp
 rsyslog_remote_loghost_address: logcollector
 sysctl_net_ipv6_conf_all_accept_ra_defrtr_value: '0'
 sysctl_net_ipv6_conf_all_accept_ra_pinfo_value: '0'
@@ -34,17 +38,21 @@ sysctl_net_ipv6_conf_default_max_addresses_value: '1'
 sysctl_net_ipv6_conf_default_router_solicitations_value: '0'
 sysctl_net_ipv4_conf_all_accept_redirects_value: '0'
 sysctl_net_ipv4_conf_all_accept_source_route_value: '0'
-sysctl_net_ipv4_conf_all_log_martians_value: '1'
+sysctl_net_ipv4_conf_all_arp_filter_value: '0'
+sysctl_net_ipv4_conf_all_arp_ignore_value: '2'
 sysctl_net_ipv4_conf_all_rp_filter_value: '1'
 sysctl_net_ipv4_conf_all_secure_redirects_value: '0'
+sysctl_net_ipv4_conf_all_shared_media_value: '0'
 sysctl_net_ipv4_conf_default_accept_redirects_value: '0'
 sysctl_net_ipv4_conf_default_accept_source_route_value: '0'
 sysctl_net_ipv4_conf_default_rp_filter_value: '1'
 sysctl_net_ipv4_conf_default_secure_redirects_value: '0'
+sysctl_net_ipv4_conf_default_shared_media_value: '0'
 sysctl_net_ipv4_icmp_ignore_bogus_error_responses_value: '1'
 sysctl_net_ipv4_tcp_rfc1337_value: '1'
 sysctl_net_ipv4_tcp_syncookies_value: '1'
-sysctl_kernel_kptr_restrict_value: '1'
+sysctl_kernel_kptr_restrict_value: '2'
+var_slub_debug_options: FZP
 var_selinux_policy_name: targeted
 var_selinux_state: enforcing
 var_polyinstantiation_enabled: 'true'
@@ -58,13 +66,13 @@ var_multiple_time_servers: 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.n
 var_sshd_set_keepalive: '0'
 sshd_idle_timeout_value: '600'
 accounts_maximum_age_login_defs: true
+accounts_password_minlen_login_defs: true
 accounts_password_pam_dcredit: true
 accounts_password_pam_lcredit: true
 accounts_password_pam_minlen: true
 accounts_password_pam_ocredit: true
-accounts_password_pam_pwhistory_remember_password_auth: true
-accounts_password_pam_pwhistory_remember_system_auth: true
 accounts_password_pam_ucredit: true
+accounts_password_pam_unix_remember: true
 accounts_password_pam_unix_rounds_password_auth: true
 accounts_password_pam_unix_rounds_system_auth: true
 accounts_passwords_pam_faillock_deny: true
@@ -77,7 +85,53 @@ accounts_umask_etc_login_defs: true
 accounts_umask_etc_profile: true
 aide_build_database: true
 aide_periodic_cron_checking: true
+audit_rules_dac_modification_chmod: true
+audit_rules_dac_modification_chown: true
+audit_rules_dac_modification_fchmod: true
+audit_rules_dac_modification_fchmodat: true
+audit_rules_dac_modification_fchown: true
+audit_rules_dac_modification_fchownat: true
+audit_rules_dac_modification_fremovexattr: true
+audit_rules_dac_modification_fsetxattr: true
+audit_rules_dac_modification_lchown: true
+audit_rules_dac_modification_lremovexattr: true
+audit_rules_dac_modification_lsetxattr: true
+audit_rules_dac_modification_removexattr: true
+audit_rules_dac_modification_setxattr: true
+audit_rules_dac_modification_umount2: true
+audit_rules_file_deletion_events_rename: true
+audit_rules_file_deletion_events_renameat: true
+audit_rules_file_deletion_events_rmdir: true
+audit_rules_file_deletion_events_unlink: true
+audit_rules_file_deletion_events_unlinkat: true
+audit_rules_immutable: true
+audit_rules_kernel_module_loading_delete: true
+audit_rules_kernel_module_loading_finit: true
+audit_rules_kernel_module_loading_init: true
+audit_rules_login_events_faillock: true
+audit_rules_login_events_lastlog: true
+audit_rules_mac_modification: true
+audit_rules_media_export: true
+audit_rules_networkconfig_modification: true
+audit_rules_privileged_commands: true
+audit_rules_privileged_commands_kmod: true
 audit_rules_privileged_commands_sudo: true
+audit_rules_session_events: true
+audit_rules_sysadmin_actions: true
+audit_rules_time_adjtimex: true
+audit_rules_time_clock_settime: true
+audit_rules_time_stime: true
+audit_rules_time_watch_localtime: true
+audit_rules_unsuccessful_file_modification_creat: true
+audit_rules_unsuccessful_file_modification_ftruncate: true
+audit_rules_unsuccessful_file_modification_open: true
+audit_rules_unsuccessful_file_modification_openat: true
+audit_rules_unsuccessful_file_modification_truncate: true
+audit_rules_usergroup_modification_group: true
+audit_rules_usergroup_modification_gshadow: true
+audit_rules_usergroup_modification_opasswd: true
+audit_rules_usergroup_modification_passwd: true
+audit_rules_usergroup_modification_shadow: true
 chronyd_specify_remote_server: true
 configure_strategy: true
 dir_perms_world_writable_sticky_bits: true
@@ -97,6 +151,19 @@ file_permissions_etc_passwd: true
 file_permissions_etc_shadow: true
 file_permissions_sshd_private_key: true
 grub2_enable_iommu_force: true
+grub2_l1tf_argument: true
+grub2_mce_argument: true
+grub2_mds_argument: true
+grub2_nosmap_argument_absent: true
+grub2_nosmep_argument_absent: true
+grub2_page_alloc_shuffle_argument: true
+grub2_page_poison_argument: true
+grub2_pti_argument: true
+grub2_rng_core_default_quality_argument: true
+grub2_slab_nomerge_argument: true
+grub2_slub_debug_argument: true
+grub2_spec_store_bypass_disable_argument: true
+grub2_spectre_v2_argument: true
 high_disruption: true
 high_severity: true
 low_complexity: true
@@ -129,7 +196,6 @@ package_dnf_automatic_installed: true
 package_rsh_removed: true
 package_rsh_server_removed: true
 package_rsyslog_gnutls_installed: true
-package_rsyslog_installed: true
 package_sendmail_removed: true
 package_setroubleshoot_plugins_removed: true
 package_setroubleshoot_removed: true
@@ -162,7 +228,6 @@ sebool_ssh_sysadm_login: true
 security_patches_up_to_date: true
 selinux_policytype: true
 selinux_state: true
-service_rsyslog_enabled: true
 set_password_hashing_algorithm_systemauth: true
 skip_ansible_lint: true
 sshd_disable_root_login: true
@@ -173,31 +238,41 @@ sudo_add_requiretty: true
 sudo_add_use_pty: true
 sudo_remove_no_authenticate: true
 sudo_remove_nopasswd: true
+sysctl_fs_protected_fifos: true
 sysctl_fs_protected_hardlinks: true
+sysctl_fs_protected_regular: true
 sysctl_fs_protected_symlinks: true
 sysctl_fs_suid_dumpable: true
 sysctl_kernel_dmesg_restrict: true
-sysctl_kernel_exec_shield: true
 sysctl_kernel_kptr_restrict: true
 sysctl_kernel_modules_disabled: true
+sysctl_kernel_panic_on_oops: true
 sysctl_kernel_perf_cpu_time_max_percent: true
 sysctl_kernel_perf_event_max_sample_rate: true
 sysctl_kernel_perf_event_paranoid: true
 sysctl_kernel_pid_max: true
 sysctl_kernel_randomize_va_space: true
 sysctl_kernel_sysrq: true
+sysctl_kernel_unprivileged_bpf_disabled: true
 sysctl_kernel_yama_ptrace_scope: true
+sysctl_net_core_bpf_jit_harden: true
+sysctl_net_ipv4_conf_all_accept_local: true
 sysctl_net_ipv4_conf_all_accept_redirects: true
 sysctl_net_ipv4_conf_all_accept_source_route: true
-sysctl_net_ipv4_conf_all_log_martians: true
+sysctl_net_ipv4_conf_all_arp_filter: true
+sysctl_net_ipv4_conf_all_arp_ignore: true
+sysctl_net_ipv4_conf_all_drop_gratuitous_arp: true
+sysctl_net_ipv4_conf_all_route_localnet: true
 sysctl_net_ipv4_conf_all_rp_filter: true
 sysctl_net_ipv4_conf_all_secure_redirects: true
 sysctl_net_ipv4_conf_all_send_redirects: true
+sysctl_net_ipv4_conf_all_shared_media: true
 sysctl_net_ipv4_conf_default_accept_redirects: true
 sysctl_net_ipv4_conf_default_accept_source_route: true
 sysctl_net_ipv4_conf_default_rp_filter: true
 sysctl_net_ipv4_conf_default_secure_redirects: true
 sysctl_net_ipv4_conf_default_send_redirects: true
+sysctl_net_ipv4_conf_default_shared_media: true
 sysctl_net_ipv4_icmp_ignore_bogus_error_responses: true
 sysctl_net_ipv4_ip_forward: true
 sysctl_net_ipv4_ip_local_port_range: true
