--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -66,6 +66,114 @@ var_postfix_inet_interfaces: loopback-only
 var_multiple_time_servers: 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp.org
 var_sshd_set_keepalive: '0'
 sshd_idle_timeout_value: '600'
+DISA_STIG_RHEL_09_211015: true
+DISA_STIG_RHEL_09_212040: true
+DISA_STIG_RHEL_09_212045: true
+DISA_STIG_RHEL_09_212050: true
+DISA_STIG_RHEL_09_213010: true
+DISA_STIG_RHEL_09_213015: true
+DISA_STIG_RHEL_09_213025: true
+DISA_STIG_RHEL_09_213030: true
+DISA_STIG_RHEL_09_213035: true
+DISA_STIG_RHEL_09_213070: true
+DISA_STIG_RHEL_09_213075: true
+DISA_STIG_RHEL_09_213080: true
+DISA_STIG_RHEL_09_214010: true
+DISA_STIG_RHEL_09_214015: true
+DISA_STIG_RHEL_09_214020: true
+DISA_STIG_RHEL_09_214025: true
+DISA_STIG_RHEL_09_215020: true
+DISA_STIG_RHEL_09_215030: true
+DISA_STIG_RHEL_09_215035: true
+DISA_STIG_RHEL_09_215040: true
+DISA_STIG_RHEL_09_215060: true
+DISA_STIG_RHEL_09_231050: true
+DISA_STIG_RHEL_09_231055: true
+DISA_STIG_RHEL_09_231100: true
+DISA_STIG_RHEL_09_231130: true
+DISA_STIG_RHEL_09_231135: true
+DISA_STIG_RHEL_09_231150: true
+DISA_STIG_RHEL_09_231155: true
+DISA_STIG_RHEL_09_231180: true
+DISA_STIG_RHEL_09_231185: true
+DISA_STIG_RHEL_09_231200: true
+DISA_STIG_RHEL_09_232055: true
+DISA_STIG_RHEL_09_232065: true
+DISA_STIG_RHEL_09_232075: true
+DISA_STIG_RHEL_09_232110: true
+DISA_STIG_RHEL_09_232150: true
+DISA_STIG_RHEL_09_232240: true
+DISA_STIG_RHEL_09_232245: true
+DISA_STIG_RHEL_09_232270: true
+DISA_STIG_RHEL_09_251045: true
+DISA_STIG_RHEL_09_252010: true
+DISA_STIG_RHEL_09_253010: true
+DISA_STIG_RHEL_09_253015: true
+DISA_STIG_RHEL_09_253020: true
+DISA_STIG_RHEL_09_253035: true
+DISA_STIG_RHEL_09_253040: true
+DISA_STIG_RHEL_09_253045: true
+DISA_STIG_RHEL_09_253050: true
+DISA_STIG_RHEL_09_253060: true
+DISA_STIG_RHEL_09_253065: true
+DISA_STIG_RHEL_09_253070: true
+DISA_STIG_RHEL_09_254015: true
+DISA_STIG_RHEL_09_254020: true
+DISA_STIG_RHEL_09_254035: true
+DISA_STIG_RHEL_09_254040: true
+DISA_STIG_RHEL_09_255045: true
+DISA_STIG_RHEL_09_255095: true
+DISA_STIG_RHEL_09_255100: true
+DISA_STIG_RHEL_09_255120: true
+DISA_STIG_RHEL_09_411010: true
+DISA_STIG_RHEL_09_411075: true
+DISA_STIG_RHEL_09_411080: true
+DISA_STIG_RHEL_09_411085: true
+DISA_STIG_RHEL_09_411090: true
+DISA_STIG_RHEL_09_412035: true
+DISA_STIG_RHEL_09_412055: true
+DISA_STIG_RHEL_09_412065: true
+DISA_STIG_RHEL_09_412070: true
+DISA_STIG_RHEL_09_431010: true
+DISA_STIG_RHEL_09_431015: true
+DISA_STIG_RHEL_09_432010: true
+DISA_STIG_RHEL_09_432025: true
+DISA_STIG_RHEL_09_611050: true
+DISA_STIG_RHEL_09_611055: true
+DISA_STIG_RHEL_09_611065: true
+DISA_STIG_RHEL_09_611070: true
+DISA_STIG_RHEL_09_611085: true
+DISA_STIG_RHEL_09_611090: true
+DISA_STIG_RHEL_09_611095: true
+DISA_STIG_RHEL_09_611100: true
+DISA_STIG_RHEL_09_611110: true
+DISA_STIG_RHEL_09_651010: true
+DISA_STIG_RHEL_09_651015: true
+DISA_STIG_RHEL_09_651030: true
+DISA_STIG_RHEL_09_651035: true
+DISA_STIG_RHEL_09_652015: true
+DISA_STIG_RHEL_09_652055: true
+DISA_STIG_RHEL_09_653010: true
+DISA_STIG_RHEL_09_653015: true
+DISA_STIG_RHEL_09_653125: true
+DISA_STIG_RHEL_09_654015: true
+DISA_STIG_RHEL_09_654020: true
+DISA_STIG_RHEL_09_654025: true
+DISA_STIG_RHEL_09_654065: true
+DISA_STIG_RHEL_09_654070: true
+DISA_STIG_RHEL_09_654075: true
+DISA_STIG_RHEL_09_654080: true
+DISA_STIG_RHEL_09_654105: true
+DISA_STIG_RHEL_09_654150: true
+DISA_STIG_RHEL_09_654210: true
+DISA_STIG_RHEL_09_654225: true
+DISA_STIG_RHEL_09_654230: true
+DISA_STIG_RHEL_09_654235: true
+DISA_STIG_RHEL_09_654240: true
+DISA_STIG_RHEL_09_654245: true
+DISA_STIG_RHEL_09_654250: true
+DISA_STIG_RHEL_09_654255: true
+DISA_STIG_RHEL_09_654275: true
 accounts_maximum_age_login_defs: true
 accounts_password_minlen_login_defs: true
 accounts_password_pam_dcredit: true
