--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -61,7 +61,7 @@ var_polyinstantiation_enabled: 'true'
 var_selinuxuser_execheap: 'false'
 var_selinuxuser_execstack: 'false'
 var_ssh_sysadm_login: 'false'
-var_postfix_root_mail_alias: system.administrator@mail.mil
+var_postfix_root_mail_alias: change_me@localhost
 var_postfix_inet_interfaces: loopback-only
 var_multiple_time_servers: 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp.org
 var_sshd_set_keepalive: '0'
