--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,15 +8,18 @@ var_accounts_passwords_pam_faillock_fail_interval: '900'
 var_accounts_passwords_pam_faillock_unlock_time: '900'
 var_password_pam_dcredit: '-1'
 var_password_pam_lcredit: '-1'
-var_password_pam_minlen: '18'
+var_password_pam_minclass: '4'
+var_password_pam_minlen: '15'
 var_password_pam_ocredit: '-1'
+var_password_pam_retry: '3'
 var_password_pam_ucredit: '-1'
-var_accounts_maximum_age_login_defs: '90'
-var_accounts_password_minlen_login_defs: '18'
-var_password_pam_unix_rounds: '65536'
+var_logind_session_timeout: '600'
+var_accounts_password_minlen_login_defs: '15'
+var_accounts_maximum_age_root: '365'
+var_password_pam_unix_rounds: '11'
 var_accounts_tmout: '600'
+var_user_initialization_files_regex: ^(\.bashrc|\.zshrc|\.cshrc|\.profile|\.bash_login|\.bash_profile)$
 var_accounts_user_umask: '077'
-var_accounts_passwords_pam_faillock_dir: /var/log/faillock
 var_l1tf_options: full,force
 var_mds_options: full,nosmt
 var_rng_core_default_quality: '500'
@@ -64,9 +67,9 @@ var_ssh_sysadm_login: 'false'
 var_postfix_root_mail_alias: change_me@localhost
 var_postfix_inet_interfaces: loopback-only
 var_multiple_time_servers: 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp.org
-var_sshd_set_keepalive: '0'
-sshd_idle_timeout_value: '600'
-DISA_STIG_RHEL_09_211015: true
+var_accounts_passwords_pam_faillock_dir: /var/log/faillock
+DISA_STIG_RHEL_09_212025: true
+DISA_STIG_RHEL_09_212030: true
 DISA_STIG_RHEL_09_212040: true
 DISA_STIG_RHEL_09_212045: true
 DISA_STIG_RHEL_09_212050: true
@@ -97,16 +100,26 @@ DISA_STIG_RHEL_09_231155: true
 DISA_STIG_RHEL_09_231180: true
 DISA_STIG_RHEL_09_231185: true
 DISA_STIG_RHEL_09_231200: true
+DISA_STIG_RHEL_09_232010: true
 DISA_STIG_RHEL_09_232055: true
 DISA_STIG_RHEL_09_232065: true
 DISA_STIG_RHEL_09_232075: true
+DISA_STIG_RHEL_09_232090: true
+DISA_STIG_RHEL_09_232095: true
 DISA_STIG_RHEL_09_232110: true
+DISA_STIG_RHEL_09_232115: true
+DISA_STIG_RHEL_09_232130: true
+DISA_STIG_RHEL_09_232135: true
 DISA_STIG_RHEL_09_232150: true
+DISA_STIG_RHEL_09_232155: true
+DISA_STIG_RHEL_09_232190: true
+DISA_STIG_RHEL_09_232195: true
 DISA_STIG_RHEL_09_232240: true
 DISA_STIG_RHEL_09_232245: true
 DISA_STIG_RHEL_09_232270: true
 DISA_STIG_RHEL_09_251045: true
 DISA_STIG_RHEL_09_252010: true
+DISA_STIG_RHEL_09_252020: true
 DISA_STIG_RHEL_09_253010: true
 DISA_STIG_RHEL_09_253015: true
 DISA_STIG_RHEL_09_253020: true
@@ -122,10 +135,11 @@ DISA_STIG_RHEL_09_254020: true
 DISA_STIG_RHEL_09_254035: true
 DISA_STIG_RHEL_09_254040: true
 DISA_STIG_RHEL_09_255045: true
-DISA_STIG_RHEL_09_255095: true
-DISA_STIG_RHEL_09_255100: true
+DISA_STIG_RHEL_09_255105: true
+DISA_STIG_RHEL_09_255110: true
+DISA_STIG_RHEL_09_255115: true
 DISA_STIG_RHEL_09_255120: true
-DISA_STIG_RHEL_09_411010: true
+DISA_STIG_RHEL_09_255125: true
 DISA_STIG_RHEL_09_411075: true
 DISA_STIG_RHEL_09_411080: true
 DISA_STIG_RHEL_09_411085: true
@@ -134,19 +148,20 @@ DISA_STIG_RHEL_09_412035: true
 DISA_STIG_RHEL_09_412055: true
 DISA_STIG_RHEL_09_412065: true
 DISA_STIG_RHEL_09_412070: true
+DISA_STIG_RHEL_09_412080: true
 DISA_STIG_RHEL_09_431010: true
 DISA_STIG_RHEL_09_431015: true
 DISA_STIG_RHEL_09_432010: true
-DISA_STIG_RHEL_09_432025: true
+DISA_STIG_RHEL_09_611010: true
 DISA_STIG_RHEL_09_611050: true
 DISA_STIG_RHEL_09_611055: true
 DISA_STIG_RHEL_09_611065: true
 DISA_STIG_RHEL_09_611070: true
-DISA_STIG_RHEL_09_611085: true
 DISA_STIG_RHEL_09_611090: true
 DISA_STIG_RHEL_09_611095: true
 DISA_STIG_RHEL_09_611100: true
 DISA_STIG_RHEL_09_611110: true
+DISA_STIG_RHEL_09_611130: true
 DISA_STIG_RHEL_09_651010: true
 DISA_STIG_RHEL_09_651015: true
 DISA_STIG_RHEL_09_651030: true
@@ -174,24 +189,34 @@ DISA_STIG_RHEL_09_654245: true
 DISA_STIG_RHEL_09_654250: true
 DISA_STIG_RHEL_09_654255: true
 DISA_STIG_RHEL_09_654275: true
-accounts_maximum_age_login_defs: true
+DISA_STIG_needed_rules: true
 accounts_password_minlen_login_defs: true
 accounts_password_pam_dcredit: true
 accounts_password_pam_lcredit: true
+accounts_password_pam_minclass: true
 accounts_password_pam_minlen: true
 accounts_password_pam_ocredit: true
+accounts_password_pam_retry: true
 accounts_password_pam_ucredit: true
 accounts_password_pam_unix_remember: true
 accounts_password_pam_unix_rounds_password_auth: true
 accounts_password_pam_unix_rounds_system_auth: true
+accounts_password_set_max_life_root: true
 accounts_passwords_pam_faillock_deny: true
 accounts_passwords_pam_faillock_deny_root: true
 accounts_passwords_pam_faillock_interval: true
 accounts_passwords_pam_faillock_unlock_time: true
+accounts_polyinstantiated_tmp: true
+accounts_polyinstantiated_var_tmp: true
 accounts_tmout: true
 accounts_umask_etc_bashrc: true
 accounts_umask_etc_login_defs: true
 accounts_umask_etc_profile: true
+accounts_user_dot_group_ownership: true
+accounts_user_dot_user_ownership: true
+accounts_users_home_files_groupownership: true
+accounts_users_home_files_ownership: true
+accounts_users_home_files_permissions: true
 aide_build_database: true
 aide_periodic_cron_checking: true
 aide_scan_notification: true
@@ -249,6 +274,24 @@ chronyd_specify_remote_server: true
 configure_strategy: true
 dir_perms_world_writable_root_owned: true
 dir_perms_world_writable_sticky_bits: true
+directory_groupowner_etc_ipsecd: true
+directory_groupowner_etc_iptables: true
+directory_groupowner_etc_nftables: true
+directory_groupowner_etc_selinux: true
+directory_groupowner_etc_sudoersd: true
+directory_groupowner_etc_sysctld: true
+directory_owner_etc_ipsecd: true
+directory_owner_etc_iptables: true
+directory_owner_etc_nftables: true
+directory_owner_etc_selinux: true
+directory_owner_etc_sudoersd: true
+directory_owner_etc_sysctld: true
+directory_permissions_etc_ipsecd: true
+directory_permissions_etc_iptables: true
+directory_permissions_etc_nftables: true
+directory_permissions_etc_selinux: true
+directory_permissions_etc_sudoersd: true
+directory_permissions_etc_sysctld: true
 disable_strategy: true
 enable_authselect: true
 enable_strategy: true
@@ -257,13 +300,68 @@ ensure_gpgcheck_local_packages: true
 ensure_gpgcheck_never_disabled: true
 ensure_logrotate_activated: true
 ensure_redhat_gpgkey_installed: true
+file_groupowner_efi_grub2_cfg: true
+file_groupowner_efi_user_cfg: true
+file_groupowner_etc_chrony_keys: true
+file_groupowner_etc_crypttab: true
+file_groupowner_etc_group: true
+file_groupowner_etc_gshadow: true
+file_groupowner_etc_ipsec_conf: true
+file_groupowner_etc_ipsec_secrets: true
+file_groupowner_etc_passwd: true
+file_groupowner_etc_sestatus_conf: true
+file_groupowner_etc_shadow: true
+file_groupowner_etc_shells: true
+file_groupowner_etc_sudoers: true
+file_groupowner_grub2_cfg: true
+file_groupowner_sshd_config: true
+file_groupowner_systemmap: true
+file_groupowner_user_cfg: true
+file_groupownership_sshd_private_key: true
+file_groupownership_sshd_pub_key: true
+file_groupownership_system_commands_dirs: true
+file_owner_efi_grub2_cfg: true
+file_owner_efi_user_cfg: true
+file_owner_etc_chrony_keys: true
+file_owner_etc_crypttab: true
+file_owner_etc_group: true
 file_owner_etc_gshadow: true
+file_owner_etc_ipsec_conf: true
+file_owner_etc_ipsec_secrets: true
+file_owner_etc_passwd: true
+file_owner_etc_sestatus_conf: true
 file_owner_etc_shadow: true
+file_owner_etc_shells: true
+file_owner_etc_sudoers: true
+file_owner_grub2_cfg: true
+file_owner_sshd_config: true
+file_owner_systemmap: true
+file_owner_user_cfg: true
+file_ownership_binary_dirs: true
+file_ownership_sshd_private_key: true
+file_ownership_sshd_pub_key: true
+file_permission_user_init_files: true
+file_permissions_binary_dirs: true
+file_permissions_efi_grub2_cfg: true
+file_permissions_efi_user_cfg: true
+file_permissions_etc_chrony_keys: true
+file_permissions_etc_crypttab: true
 file_permissions_etc_group: true
 file_permissions_etc_gshadow: true
+file_permissions_etc_ipsec_conf: true
+file_permissions_etc_ipsec_secrets: true
 file_permissions_etc_passwd: true
+file_permissions_etc_sestatus_conf: true
 file_permissions_etc_shadow: true
+file_permissions_etc_shells: true
+file_permissions_etc_sudoers: true
+file_permissions_grub2_cfg: true
+file_permissions_sshd_config: true
 file_permissions_sshd_private_key: true
+file_permissions_sshd_pub_key: true
+file_permissions_sudo: true
+file_permissions_systemmap: true
+file_permissions_user_cfg: true
 grub2_enable_iommu_force: true
 grub2_l1tf_argument: true
 grub2_mce_argument: true
@@ -280,6 +378,7 @@ grub2_spec_store_bypass_disable_argument: true
 grub2_spectre_v2_argument: true
 high_disruption: true
 high_severity: true
+logind_session_timeout: true
 low_complexity: true
 low_disruption: true
 low_severity: true
@@ -316,6 +415,7 @@ package_sendmail_removed: true
 package_setroubleshoot_plugins_removed: true
 package_setroubleshoot_removed: true
 package_setroubleshoot_server_removed: true
+package_sssd_installed: true
 package_sudo_installed: true
 package_talk_removed: true
 package_talk_server_removed: true
@@ -326,7 +426,6 @@ package_tftp_server_removed: true
 package_xinetd_removed: true
 package_ypbind_removed: true
 package_ypserv_removed: true
-patch_strategy: true
 postfix_client_configure_mail_alias: true
 postfix_network_listening_disabled: true
 reboot_required: true
@@ -340,20 +439,18 @@ sebool_polyinstantiation_enabled: true
 sebool_selinuxuser_execheap: true
 sebool_selinuxuser_execstack: true
 sebool_ssh_sysadm_login: true
-security_patches_up_to_date: true
 selinux_policytype: true
 selinux_state: true
 service_auditd_enabled: true
+service_sssd_enabled: true
 set_password_hashing_algorithm_systemauth: true
-skip_ansible_lint: true
 sshd_disable_root_login: true
-sshd_set_idle_timeout: true
-sshd_set_keepalive: true
+sssd_enable_pam_services: true
+sssd_ldap_configure_tls_reqcert: true
+sssd_ldap_start_tls: true
 sudo_add_noexec: true
 sudo_add_requiretty: true
 sudo_add_use_pty: true
-sudo_remove_no_authenticate: true
-sudo_remove_nopasswd: true
 sysctl_fs_protected_fifos: true
 sysctl_fs_protected_hardlinks: true
 sysctl_fs_protected_regular: true
@@ -411,6 +508,7 @@ sysctl_net_ipv6_conf_default_autoconf: true
 sysctl_net_ipv6_conf_default_max_addresses: true
 sysctl_net_ipv6_conf_default_router_solicitations: true
 sysctl_vm_mmap_min_addr: true
+systemd_tmp_mount_enabled: true
 timer_logrotate_enabled: true
 unknown_severity: true
 unknown_strategy: true
