--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,10 +13,11 @@ var_password_pam_minlen: '15'
 var_password_pam_ocredit: '-1'
 var_password_pam_retry: '3'
 var_password_pam_ucredit: '-1'
+var_password_hashing_algorithm_pam: sha512
 var_logind_session_timeout: '600'
 var_accounts_password_minlen_login_defs: '15'
 var_accounts_maximum_age_root: '365'
-var_password_pam_unix_rounds: '11'
+var_password_pam_unix_rounds: '65536'
 var_accounts_tmout: '600'
 var_user_initialization_files_regex: ^(\.bashrc|\.zshrc|\.cshrc|\.profile|\.bash_login|\.bash_profile)$
 var_accounts_user_umask: '077'
